Fix: Wrap in output field

--- a/src/styles.css
+++ b/src/styles.css
@@ -62,6 +62,7 @@
   background-color: #4a5568;
   padding: 10px;
   border-radius: 0.375rem;
+  
 }
 
 h1 {
@@ -81,4 +82,8 @@ html {
 
 .slider {
   width: 100px;
+}
+
+.outputContent {
+  overflow-wrap: anywhere;
 }
